UI improved, logo added, day fragment update bug fixed, group color select bug fixed